--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script>
-    const SERVER_URL = window.location.origin;
+    const SERVER_URL = 'https://wbevro.onrender.com';
     
     const chatToggle = document.getElementById('chatToggle');
     const chatBox = document.getElementById('chatBox');
